Fix overflow de course card title

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -486,6 +486,8 @@ p {
 
 .courseCardTitle {
     width: 50%;
+    overflow: hidden;
+    max-height: 40px;
     margin: 0;
     float: left;
     font-family: 'Open Sans', sans-serif;
